# quantum-circuit-visualizer

./: README.md
.github/workflows/: deploy.yml
quantum_engine/: CMakeLists.txt  build_wasm.sh
quantum_engine/src/: gate_registry.cpp  gate_registry.hpp  quantum_state.cpp  quantum_state.hpp  simulator.cpp  simulator.hpp  types.hpp  wasm_bindings.cpp
quantum_engine/tests/: test_simulator.cpp
quantum_ui/: index.html  package-lock.json  package.json
quantum_ui/src/: App.css  App.jsx  constants.js  main.jsx
quantum_ui/src/components/: Credits.jsx  DraggableBarrier.jsx  DraggableCnotNode.jsx  DraggableGate.jsx  GateVisual.jsx  MeasurementHistogram.jsx  ResultsPanel.jsx  ThemeToggle.jsx
quantum_ui/src/pages/: QuestionBuilderPage.jsx  QuestionsPage.jsx
quantum_ui/src/questions/: questionData.js
quantum_ui/src/utils/: circuitCode.js  circuitDnD.js  compactCircuit.js  simulateCircuit.js  simulateShots.js
quantum_ui/src/wasm/: quantum_engine.js  quantum_engine.wasm
